<resources>
    <string name="appName">Notes</string>
    <string name="datePickerButtonText">Save date</string>
    <string name="menuSettings">Settings</string>
    <string name="menuFavorite">Favorite</string>
    <string name="menuSearch">Search</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="navigationDrawerOpen">Open drawer</string>
    <string name="navigationDrawerClose">Close drawer</string>
    <string name="menuSort">Sort</string>
    <string name="menuAdd">Add</string>
    <string name="menuEdit">Edit</string>
    <string name="menuSend">Send</string>
    <string name="userName">Viacheslav</string>
    <string name="userEmail">mail44@yandex.ru</string>
    <string name="about">About program</string>
    <string name="preCreateTimeString">Created in</string>
    <string name="menuDelete">Delete</string>
</resources>