<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionEdit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="15"
        android:title="@string/menuEdit"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionSend"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="25"
        android:title="@string/menuSend"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="16"
        android:title="@string/menuDelete"
        app:showAsAction="never" />
</menu>