<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navHeaderHeight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="@dimen/navHeaderPaddingStartEnd"
    android:paddingEnd="@dimen/navHeaderPaddingStartEnd"
    android:paddingTop="@dimen/navHeaderPaddingTopBottom"
    android:paddingBottom="@dimen/navHeaderPaddingTopBottom"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="@dimen/navHeaderDimen"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userIcon"
        android:layout_width="@dimen/userIconSize"
        android:layout_height="@dimen/userIconSize"
        android:src="@drawable/user_icon"
        app:civ_border_width="@dimen/userIconBorderSize"
        app:civ_border_color="@color/design_default_color_surface"/>
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="@dimen/navHeaderUserInfoTextSize"/>
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userEmail"
        android:textSize="@dimen/navHeaderUserInfoTextSize"/>

</LinearLayout>